# blaze-builder

./: .gitignore  CHANGELOG.md  CHANGES  blaze-builder.cabal  cabal.haskell-ci
.github/workflows/: haskell-ci.yml  stack.yml
Blaze/ByteString/: Builder.hs
Blaze/ByteString/Builder/: ByteString.hs  HTTP.hs
Blaze/ByteString/Builder/Char/: Utf8.hs
Blaze/ByteString/Builder/Html/: Utf8.hs  Word.hs
Blaze/ByteString/Builder/Internal/: Write.hs
Criterion/: ScalingBenchmark.hs
benchmarks/: BenchmarkServer.hs  FastPut.hs  StrictIO.hs
benchmarks/Throughput/: BinaryBuilder.hs  BlazeBuilder.hs  BlazeBuilderDeclarative.hs  BlazePut.hs  BlazePutMonad.hs  Utils.hs
tests/: Tests.hs
