Name:                blaze-builder
Version:             0.4.3
Synopsis:            Efficient buffered output.

Description:
    This library allows to efficiently serialize Haskell values to lazy bytestrings
    with a large average chunk size. The large average chunk size allows to make
    good use of cache prefetching in later processing steps (e.g. compression) and
    reduces the system call overhead when writing the resulting lazy bytestring to a
    file or sending it over the network.
    .
    This library was inspired by the module Data.Binary.Builder provided by the
    binary package. It was originally developed with the specific needs of the
    blaze-html package in mind. Since then it has been restructured to serve as a
    drop-in replacement for Data.Binary.Builder, which it improves upon both in
    speed as well as expressivity.

Author:              Jasper Van der Jeugt, Simon Meier, Leon P Smith
Copyright:           (c) 2010-2014 Simon Meier
                     (c) 2010 Jasper Van der Jeugt
                     (c) 2013-2015 Leon P Smith
Maintainer:          https://github.com/blaze-builder

License:             BSD3
License-file:        LICENSE

Homepage:            https://github.com/blaze-builder/blaze-builder
Bug-Reports:         https://github.com/blaze-builder/blaze-builder/issues
Stability:           Stable

Category:            Data
Build-type:          Simple
Cabal-version:       >= 1.10

Tested-with:
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Extra-source-files:
                     Makefile
                     README.markdown
                     TODO
                     CHANGES

                     benchmarks/*.hs
                     benchmarks/Throughput/*.hs
                     benchmarks/Throughput/*.h
                     benchmarks/Throughput/*.c

                     tests/*.hs

Source-repository head
  Type: git
  Location: https://github.com/blaze-builder/blaze-builder.git

Library
  default-language:  Haskell98

  exposed-modules:   Blaze.ByteString.Builder
                     Blaze.ByteString.Builder.Int
                     Blaze.ByteString.Builder.Word
                     Blaze.ByteString.Builder.ByteString
                     Blaze.ByteString.Builder.Char.Utf8
                     Blaze.ByteString.Builder.Char8
                     Blaze.ByteString.Builder.Html.Utf8
                     Blaze.ByteString.Builder.Html.Word
                     Blaze.ByteString.Builder.HTTP
                     Blaze.ByteString.Builder.Compat.Write

                     Blaze.ByteString.Builder.Internal.Write

  build-depends:
      base       >= 4.9    && < 5
    , bytestring >= 0.10.4 && < 1
    , deepseq
    , ghc-prim
    , text       >= 1.1.2  && < 3

  ghc-options:
    -Wall
    -Wcompat

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Tests.hs
  default-language: Haskell98
  ghc-options:
    -Wall
    -Wno-orphans
    -Wcompat

  build-depends: base
               , blaze-builder
               , bytestring
               , HUnit
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text
               , utf8-string
